--- a/static/main.css
+++ b/static/main.css
@@ -359,8 +359,9 @@ body {
 body, html {
 	margin: 0;
 	height: 100%;
-	width: 100%;
-	min-width: 300px;
+	/*width: 100%;*/
+	min-width: 400px;
+	/*background-color: black;*/
 }
 nav {
 	background-color: white
