--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,30 +25,64 @@
 	{% endblock %}	
 
 	<script type="text/javascript">
-		$('input').keypress(function(e){
-			if(e.which == 13){
-				e.preventDefault();
-				$('form').submit();
-			}
-		})
+			$('input').keypress(function(e){
+				if(e.which == 13){
+					e.preventDefault();
+					$('form').submit();
+				}
+			});
 
-		$(window).ready(() => {
-			let w = window.innerWidth;
-			console.log('guuh');
-			if(w <= 600){
-				$('.naver').empty();
-				console.log('empty');
+			let loop2 = (arr, func) => {
+				for(let i of arr){
+					func(i)
+				}
 			}
-		});
 
-		$(window).resize(() => {
 			let w = window.innerWidth;
-			console.log('guuh');
+			let iters = ["/","/projects","/contact"];
 			if(w <= 600){
-				$('.naver').empty();
-				console.log(w);
+				$('.naver').empty().append($('<div></div>'));
+				$('.naver > div').append($('<div></div>').addClass("dropBtn"), $('<div></div>').addClass("dropMenu")).addClass("drop");
+				loop2(iters, (i) => {
+					$('.dropBtn').append($('<div></div>').addClass('lines'));			
+					$('.dropMenu').append($(`<a href="${i}">${i}</a>`));
+				});
 			}
-		});
+
+			$(window).resize(() => {
+				let w = window.innerWidth;
+				if(w <= 600){
+					console.log('guuh');
+					$('.naver').empty().append($('<div></div>'));
+					$('.naver > div').append($('<div></div>').addClass("dropBtn"), $('<div></div>').addClass("dropMenu")).addClass("drop");
+					loop2(iters, (i) => {
+						$('.dropBtn').append($('<div></div>').addClass('lines'));			
+						$('.dropMenu').append($(`<a href="${i}">${i}</a>`));
+					});
+				}
+				let toogle = true;
+				$('.drop').click(() => {
+					if(toogle == true){
+						$('.dropMenu').css('display','block');
+						toogle = false;
+					} else {
+						$('.dropMenu').css('display','none');
+						toogle = true;
+					}
+				});
+			});
+
+			let toogle = true;
+			$('.drop').click(() => {
+				if(toogle == true){
+					$('.dropMenu').css('display','block');
+					toogle = false;
+				} else {
+					$('.dropMenu').css('display','none');
+					toogle = true;
+				}
+			});
+
 	</script>
 </body>
 </html>
