--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 	<div class="amatic" id="scrolltop">
 		<nav class="row spaced" style="background-color: black; color: white; font-size: 36pt;">
 			<div class="menu lrg">
-				<div style="display: flex; justify-content: space-between;">
+				<div class="menuLayer">
 					<div>Ivan Alvarez</div>
 					<div class="naver">
 						<!-- <div><a href="/hobbies">/hobbies</a></div> -->
