--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,8 +3,8 @@
 {% block body %}
 	<nav class="row spaced barcode" style="background-color: black; color: white; width: 100%">
 		<div class="menu lrg">
-			<div style="display: flex; justify-content: space-between; font-size: 30pt; flex-wrap: wrap;">
-				<div style="margin-right: 100px">Ivan Alvarez</div>
+			<div class="contactMenu">
+				<div class="navName">Ivan Alvarez</div>
 				<div class="naver">
 					<div><a href="/" class="med bleach">_about</a></div>
 					<!-- <div><a href="/hobbies">_hobbies</a></div> -->
