--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-	<nav class="row spaced barcode" style="background-color: black; color: white; width: 100%">
+	<nav class="row spaced barcode" style="background-color: black; color: white; width: 100%; position: fixed;">
 		<div class="menu lrg">
 			<div class="contactMenu">
 				<div class="navName">Ivan Alvarez</div>
