--- a/static/main.css
+++ b/static/main.css
@@ -360,6 +360,17 @@ body {
 .navName {
 	margin-right: 100px;
 }
+body, html {
+	margin: 0;
+	width: 100%;
+	min-width: 360px;
+	overflow-x: hidden;
+	/*background-color: black;*/
+}
+nav {
+	background-color: white
+	/*width: 100%;*/
+}
 @media only screen and (max-width: 600px) {
   .menuLayer {
 	display: flex; 
@@ -377,6 +388,22 @@ body {
   body { 
 	max-width: 600px;
   }
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(photos/2452.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
   .naver {
 	width: 0;
   }
@@ -402,7 +429,7 @@ body {
   	background-size: cover;
   	background-position: center;
   	background-repeat: no-repeat;
-  	background-attachment: initial;
+  	background-attachment: fixed;
 	min-height: 100vh;	
 	width: 100%;
   }
@@ -439,17 +466,6 @@ body {
   }
 }
 
-body, html {
-	margin: 0;
-	width: 100%;
-	min-width: 360px;
-	overflow-x: hidden;
-	/*background-color: black;*/
-}
-nav {
-	background-color: white
-	/*width: 100%;*/
-}
 
 /*font-family: 'Libre Barcode 39 Text', cursive;
 font-family: 'Amatic SC', cursive;
