--- a/static/main.css
+++ b/static/main.css
@@ -370,6 +370,7 @@ body, html {
 nav {
 	background-color: white
 	/*width: 100%;*/
+	z-index: 10;
 }
 @media only screen and (max-width: 600px) {
   .menuLayer {
@@ -389,7 +390,7 @@ nav {
 	max-width: 600px;
   }
 
-body:before {
+/*#scrolltop:before {
   content: "";
   display: block;
   position: fixed;
@@ -403,7 +404,8 @@ body:before {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+  background-position: center;
+}*/
   .naver {
 	width: 0;
   }
@@ -432,21 +434,21 @@ body:before {
 	min-height: 100vh;	
 	width: 100%;
   }*/
-/*  #scrolltop:before {
+  #scrolltop:before {
 	content: "";
 	display: block;
 	position: fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
-	height: 100%;
-	z-index: -10;
+	height: 100vh;
+	z-index: 0;
 	background: url('./images/img_clock1.jpg') no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-  }*/
+  }
   .theLib {
   	background: none;
   	/*background-color: rgba(245, 222, 179, 0);*/
