menu on resize switch version, onready set version

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,6 +15,7 @@
 					<div><a class="bleach" href="/logout">_logout</a></div>
 				{% endif %}
 				</div>
+				<div class="drop"></div>
 			</div>
 		</div>
 	</nav>
