--- a/static/main.css
+++ b/static/main.css
@@ -34,7 +34,7 @@
 }
 .drop {
 	/*position: relative;*/
-	display: inline-block;
+	/*display: inline-block;*/
 	/*margin: 10px 0;*/
 }
 .contactMenu {
@@ -62,6 +62,7 @@
 	border: solid 1px white;
 	display: block;
 	text-align: center;
+	
 }
 
 .bord > h2 {
@@ -386,23 +387,6 @@ nav {
   body { 
 	max-width: 600px;
   }
-
-/*#scrolltop:before {
-  content: "";
-  display: block;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -10;
-  background: url('./images/img_clock1.jpg') no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-position: center;
-}*/
   .naver {
 	width: 0;
   }
