--- a/static/main.css
+++ b/static/main.css
@@ -32,11 +32,6 @@
 .dropBtn > p {
 	font-size: 30pt;
 }
-.drop {
-	/*position: relative;*/
-	/*display: inline-block;*/
-	/*margin: 10px 0;*/
-}
 .contactMenu {
 	display: flex; 
 	justify-content: space-between; 
@@ -62,9 +57,12 @@
 	border: solid 1px white;
 	display: block;
 	text-align: center;
-	
-}
 
+}
+.bord > div {
+	background-color: white;
+	border-radius: 10px;
+}
 .bord > h2 {
 	text-align: center;
 }
@@ -76,6 +74,7 @@
 	-webkit-flex-wrap: wrap;
 	display: flex;   
 	flex-wrap: wrap;
+	background-color: wheat;
 }
 .bord {
 	display: flex;
@@ -102,7 +101,6 @@ body {
 	background-image: url('./images/jpgresume.jpg'); 
 	background-position: center; 
 	background-size: cover;
-	background-position: center;
 }
 .school {
 	background-image: url('./images/img_class.jpg');
@@ -234,14 +232,6 @@ body {
 	width: 100%;
 }
 
-/*.resume {
-	background-image: url('https://i.pinimg.com/originals/bc/c2/3c/bcc23c62544224bc5133a8f0b728fc99.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	width: 80%;
-	height: 100%;
-}*/
-
 .clsbtn {
 	width: 20px
 }
@@ -307,7 +297,6 @@ body {
 }
 .pressStart {
 	font-family: 'Press Start 2P', cursive;
-
 	width: 100%;
 }
 .barcode {
@@ -350,7 +339,7 @@ body {
 }
 .des {
 	display: flex; 
-	margin: 0px 100px
+	padding: 0px 100px;
 }
 .welcome {
 	text-align: center; margin: 0; font-size: 38pt;
@@ -396,12 +385,14 @@ nav {
 	width: 90px;
   }
   .des {
-  	background-color: wheat;
   	margin: 0;
   	width: 100%;
   }
   .float {
-  	opacity: 0.97
+  	/*z-index: -2;*/
+  	opacity: 0.97;
+  	background-color: none;
+  	background: none;
   }
   .welcome {
   	color: wheat;
@@ -415,6 +406,7 @@ nav {
 	min-height: 100vh;	
 	width: 100%;
   }*/
+
   #scrolltop:before {
 	content: "";
 	display: block;
@@ -423,7 +415,7 @@ nav {
 	top: 0;
 	width: 100%;
 	height: 100vh;
-	z-index: -1;
+	z-index: -2;
 	background: url('./images/img_clock1.jpg') no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -441,6 +433,12 @@ nav {
   	margin: 5px 0px;
   	border-radius: 10px;
   	/*width: 100%;*/
+  }
+  .purp:before {
+	z-index: -1;
+  }
+  #modal:before {
+  	z-index: 999;
   }
   .purp, .school {
   	background-color: none;
