--- a/templates/about.html
+++ b/templates/about.html
@@ -26,8 +26,8 @@
 	  </div>
 
 	  <div style="justify-content: center; display: flex; flex-direction: column; align-items: center; width: 100%;">
-		<div style="width: 100%;">
-		  <div class="float" style="display: flex; justify-content: space-around; width: 100%;">
+		<div style="width: 100%; z-index: 5">
+		  <div class="float" style="background-color: wheat; display: flex; justify-content: space-around; width: 100%;">
 			<div class="des">
 				<div style="display: flex; height: 100%; justify-content: center; align-items: center;">
 					<div class="icon"></div>
@@ -38,7 +38,7 @@
 				  <p>I favor using nodejs and AWS</p>
 				  <p>I prefer tea instead of coffee</p>
 				  <p>No dev exp aside from autonomous deployments</p>
-				  <p>presented in <a style="font-size: 10pt;" class="pressStart" href="/gallery">Gallery</a></p>
+				  <p>presented in <a style="font-size: 10pt;" class="pressStart" href="/projects">Gallery</a></p>
 				  <p>and <a class="orbi" href="https://github.com/Alvarian/INTRO" target="_blank">Github</a></p>
 				</div>
 			</div>
@@ -47,7 +47,7 @@
 			  <p><a class="anchor" style="font-size: 16pt; cursor: pointer; border: solid 1px black; background-color: white" href="/contact">Contact me</a></p>
 			</div>
 			<div id="modal" style="display: none; height: 100vh;">
-				<div class="modal-content" style="display: flex; justify-content: center; max-width: 400px; flex-direction: column; border-radius: 5px; min-height: 560px;">
+				<div class="modal-content" style="display: flex; justify-content: center; max-width: 400px; min-width: 310px; flex-direction: column; border-radius: 5px; min-height: 560px;">
 					<span class="clsbtn orbi" style="cursor: pointer;">X</span>
 					<div style="width: 100%; display: flex; justify-content: center;">	
 						<div class="resume"></div>
