--- a/static/modalbox.css
+++ b/static/modalbox.css
@@ -51,3 +51,9 @@
   height: 100%;
   width: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+  .modal-content {
+    margin: 7% auto;
+  }
+}
