--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 			<div style="height: 70%; font-size: 7pt;; margin: 0;" class="pressStart betweened">
 				<div style="width: 100%">
 					<h3 class="title" style="text-decoration: underline; width: 100%;">Hover Over an App! >></h3>
-					<p class="article">Hover over an app! >></p>
+					<p class="article description">Hover over an app! >></p>
 				</div>
 				<div class="type">Hover over an app! >></div>	
 				<div class="icons"></div>		
@@ -94,7 +94,7 @@
 						$(".open_{{ file.id }}").css('display','block');
 					});
 					$(".card_{{ file.id }}").on('mouseover', () => {
-						$(".article").text('{{ file.description }}');
+						$(".description").text('{{ file.description }}');
 						$(".title").text('{{ file.title }}');
 						$(".type").text('{{ file.app_type }}');
 					});
