clicking features for project buttons in jquery

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 	<h1 class="orb codepro" style="text-align: center;">Project Gallery</h1>
 	<div class="row">
 		
-		<div style="padding: 0px 10px; width: 190px;" class="synop">
+		<div class="synop">
 			<h2 class="orb codepro">Synopsis</h2>
 			<div style="height: 70%; font-size: 7pt;; margin: 0;" class="pressStart betweened">
 				<div style="width: 100%">
@@ -37,7 +37,7 @@
 		</div>
 
 		<div class="cards">
-			<div class="gallery" style="overflow-y: scroll; height: 70vh;">
+			<div class="gallery gall">
 			{% for file in files %}
 				<div style="display: none;" class="open_{{ file.id }}" id="modal">
 
@@ -82,23 +82,67 @@
 				<div class="dropCard">
 					<div style="position: relative;">
 						<div style="background-image: url('{{ file.icon_file }}');" class="card card_{{ file.id }}"></div>
-						<!-- <div style="position: absolute; background-color: grey; opacity: .5; height: 100px; width: 100%;"></div> -->
+						<div class="article lay lay_{{ file.id }}">
+							<h2 class="clickOpen orbi card_{{ file.id }}">OPEN</h2>
+						</div>
 					</div>
 					<div style="height: 100px;"></div>
-					<!-- GITHUB -->
+					<!-- GITHUB button -->
 					<a class="gitBTN" target="_blank" href={{ file.git_url }}><i class="fab fa-4x fa-github"></i></a>
 				</div>
 
 				<script>
-					$(".card_{{ file.id }}").on('click', () => {
-						$(".open_{{ file.id }}").css('display','block');
-					});
-					$(".card_{{ file.id }}").on('mouseover', () => {
-						$(".description").text('{{ file.description }}');
-						$(".title").text('{{ file.title }}');
-						$(".type").text('{{ file.app_type }}');
-					});
-						// When the user clicks on <span> (x), close the modal
+					$(window).ready(() => {
+						let clickWin = (e) => {
+							let element = e.target.className;
+							if(element == 'article lay lay_{{ file.id }}' || element == 'clickOpen orbi card_{{ file.id }}' || element == 'card card_{{ file.id }}'){
+								$(".card_{{ file.id }}").css('transform', 'scale(1.2)');
+								$(".lay_{{ file.id }}").css('display','flex');
+								$(".description").text('{{ file.description }}');
+								$(".title").text('{{ file.title }}');
+								$(".type").text('{{ file.app_type }}');
+								// console.log('over');
+							} else {
+								$(".card_{{ file.id }}").css('transform', 'scale(1)');
+								$(".lay_{{ file.id }}").css('transform', 'scale(1)');
+								$(".lay_{{ file.id }}").css('display', 'none');
+								// console.log('out', element);
+							}
+						}
+						if(window.innerWidth <= 600){
+							$('.card_{{ file.id }}').on('click', (e) => {
+								$(".card_{{ file.id }}").css('transform', 'scale(1.2)');
+								$(".lay_{{ file.id }}").css('display','flex');
+								$(".description").text('{{ file.description }}');
+								$(".title").text('{{ file.title }}');
+								$(".type").text('{{ file.app_type }}');
+								console.log('lay');
+							});
+							$(window).on('click', (e) => {
+								clickWin(e);
+							});
+							$(window).on('click', (e) => {
+								let element = e.target.className;
+								if(element == 'article lay lay_{{ file.id }}' || element == 'clickOpen orbi card_{{ file.id }}'){
+
+									$(".open_{{ file.id }}").css('display','block');
+								}
+							});
+						} else {
+							$(window).on('click', (e) => {
+								let element = e.target.className;
+								if(element == 'article lay lay_{{ file.id }}' || element == 'clickOpen orbi card_{{ file.id }}'){
+
+									$(".open_{{ file.id }}").css('display','block');
+								}
+							});
+							$(window).on('mouseover', (e) => {
+								clickWin(e);
+							});
+						}
+					})	
+
+					// When the user clicks on <span> (x), close the modal
 					document.getElementsByClassName("{{ file.id }}_close")[0].onclick = () => {
 						$(".open_{{ file.id }}").css('display','none');
 					}
