--- a/static/main.css
+++ b/static/main.css
@@ -12,7 +12,7 @@
 	display: flex; 
 	justify-content: space-around; 
 	flex-wrap: wrap;
-	width: 35%;
+	width: 45%;
 }
 .dropBtn {
 	border: solid 3px white;
@@ -31,6 +31,25 @@
 }
 .dropBtn > p {
 	font-size: 30pt;
+}
+.lay {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 9;
+/*	background-image: url('https://solarsystem.nasa.gov/system/basic_html_elements/11561_Sun.png');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;*/
+	background-color: yellow;
+	opacity: 0.8;
+	display: none;
+	top: 0;
+	cursor: pointer;
+}
+.clickOpen {
+	color: red;
+	cursor: pointer;
 }
 .contactMenu {
 	display: flex; 
@@ -57,7 +76,7 @@
 	border: solid 1px white;
 	display: block;
 	text-align: center;
-
+	padding: 6px 0px;
 }
 .bord > div {
 	background-color: white;
@@ -247,24 +266,21 @@ body {
 	margin-right: 25px;
 }
 .card {
-	border-style: double;
+	border-style: solid;
 	border-width: 5px;
-	background-color: white;
 	padding: 10px;
 	border-radius: 10px;
-	margin: 10px; 
+	background-color: white;
+	margin: 10px;
 	width: 130px; 
 	height: 130px; 
 	background-size: 80% 80%; 
 	background-repeat: no-repeat; 
 	background-position: center;
 }
-.card:hover {
-	background-color: pink;
-}
 .cards {
-	margin-left: 25px;
 	overflow: auto;
+	width: 100%;
 }
 .fordeployed, .forupload {
 	visibility: hidden;
@@ -287,9 +303,10 @@ body {
 	text-align: center;
 }
 .synop {
-	/*width: 200px;*/
+	padding: 0px 20px; 
+	width: 190px;
 	text-align: center;
-	height: 100%;
+	height: 70vh;
 	background-color: white;
 }
 #app {
@@ -362,7 +379,18 @@ nav {
 	/*width: 100%;*/
 	z-index: 10;
 }
+.drop {
+	position: absolute;
+}
+.gall {
+	overflow-y: scroll; 
+	height: 70vh; 
+	padding-left: 25px;
+}
 @media only screen and (max-width: 600px) {
+  .gall {
+  	 padding-top: 40px;
+  }
   .menuLayer {
 	display: flex; 
 	justify-content: space-around;
@@ -378,6 +406,9 @@ nav {
   }
   body { 
 	max-width: 600px;
+  }
+  .drop {
+  	position: static;
   }
   .naver {
 	width: 0;
@@ -400,16 +431,6 @@ nav {
   .welcome {
   	color: wheat;
   }
-/*  #scrolltop {
-	background-image: url('./images/img_clock1.jpg');
-  	background-size: cover;
-  	background-position: center;
-  	background-repeat: no-repeat;
-  	background-attachment: fixed;
-	min-height: 100vh;	
-	width: 100%;
-  }*/
-
   #scrolltop:before {
 	content: "";
 	display: block;
