--- a/static/main.css
+++ b/static/main.css
@@ -272,8 +272,8 @@ body {
 	border-radius: 10px;
 	background-color: white;
 	margin: 10px;
-	width: 130px; 
-	height: 130px; 
+	width: 120px; 
+	height: 120px; 
 	background-size: 80% 80%; 
 	background-repeat: no-repeat; 
 	background-position: center;
@@ -385,7 +385,7 @@ nav {
 .gall {
 	overflow-y: scroll; 
 	height: 70vh; 
-	padding-left: 25px;
+	padding: 0px 20px;
 }
 @media only screen and (max-width: 600px) {
   .gall {
