update flex lib

--- a/static/flexbox.css
+++ b/static/flexbox.css
@@ -21,6 +21,10 @@
 .spaced {
 	justify-content: space-around;
 }
+.arounded {
+  display: flex;
+  justify-content: space-around;
+}
 .betweened {
 	display: flex;
 	flex-direction: column;
