update flex lib, adj modal cont height < 600

--- a/static/flexbox.css
+++ b/static/flexbox.css
@@ -21,6 +21,10 @@
 .spaced {
 	justify-content: space-around;
 }
+.centered {
+  display: flex;
+  justify-content: center;
+}
 .arounded {
   display: flex;
   justify-content: space-around;
