post on portal, get on portal, get on gallery, post on register & login all full replaced with mysql reliability

--- a/templates/portal.html
+++ b/templates/portal.html
@@ -63,7 +63,7 @@
 			<div class="gallery">
 			{% for file in files %}
 				<form class="card" action="/portal/{{ file.id }}/" method="POST">
-					<h3>{{ file.title }}</h3>
+					<h3>{{ file[0] }}</h3>
 					<img style="width: 150px;" src="{{ file.icon_file }}">
 					 <p>{{ file.description }}</p>
 					<input type="hidden" name="name" value="{{ file.title }}">
