--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,11 @@
 
 </head>
 <body>
+	<script type="application/javascript" src="{{ url_for('static', filename='/dist/lib.bundle.js') }}"></script>
+	<script>		
+		Window.games = [];
+	</script>
+
 	{% block body %}
 	{% endblock %}	
 
@@ -52,7 +57,6 @@
 			});
 
 			$(window).click((e) => {
-				console.log(e.target.className);
 				let clas = e.target.className;
 				if(clas == 'drop' || clas == 'dropBtn' || clas == 'lines'){} else {
 					$('.dropMenu').css('display','none');
