--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" oncontextmenu="return false">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -24,6 +24,14 @@
 	<script type="application/javascript" src="{{ url_for('static', filename='/dist/lib.bundle.js') }}"></script>
 	<script>		
 		Window.games = [];
+
+		$(document).keydown(function(e){ 
+    if(e.which === 123){ 
+ 
+       return false; 
+ 
+    } 
+});
 	</script>
 
 	{% block body %}
